# pallas-slenderpy

./: .gitignore  create_uvenv  create_uvenv.ps1  pyproject.toml
.github/workflows/: pytest.yml
doc/: beam.rst  index.rst
examples/: beam.py
src/slenderpy/: simtools.py
src/slenderpy/future/beam/: beam.py  fd_utils.py
test/: test_future-beam-dynamic.py  test_future-beam-fd_utils.py  test_future-beam-static.py
