[build-system]
requires = [
    "setuptools>=68.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "slenderpy"
version = "2026.0.0"
authors = [
    { name = "Mews Labs", email = "emmanuel.cieren@mews-labs.com" },
]
description = "Simulation of slender structures like cables or beams"
readme = "README.md"
requires-python = ">=3.11, <3.15"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Mozilla Public License 2.0",
]
dependencies = [
    "matplotlib >= 3.3.2",
    "numpy >= 1.19.0",
    "pandas >= 1.1.3",
    "pyntb >= 2026.1.0",
    "scipy >= 1.7.0",
    "tqdm >= 4.58.0",
    "xarray >= 0.16.2",
]

[project.optional-dependencies]
examples = [
    "matplotlib"
]
test = [
    "pylint",
    "pytest",
]
lint = [
    "black ~= 25.1.0",
    "mypy ~= 1.13.0",
    "ruff ~= 0.8.0"
]
dev = [
    "slenderpy[test,lint]",
]

[project.urls]
"Homepage" = "https://github.com/rte-france/pallas-slenderpy"
